@@ -8,14 +8,17 @@ endif
 libopts_la_SOURCES      = libopts.c
 libopts_la_CPPFLAGS     = -I$(srcdir)
 libopts_la_LDFLAGS      = -version-info  42:1:17
-# HMS: we're not currently otherwise using AM_CFLAGS>..
-AM_CFLAGS		= $(CC_NOFORMAT)
+
 EXTRA_DIST		=
 BUILT_SOURCES		=
 MOSTLYCLEANFILES	=
 
+AM_CFLAGS	= $(NTP_HARD_CFLAGS) $(CC_NOFORMAT)
+AM_CPPFLAGS	= $(NTP_HARD_CPPFLAGS)
+AM_LDFLAGS	= $(NTP_HARD_LDFLAGS)
+
 libopts.c:		$(BUILT_SOURCES)
-@: do-nothing rule to avoid default SCCS get
+	@: do-nothing rule to avoid default SCCS get
 
 
 # Makefile fragment from gnulib-s stdnoreturn module:
